--- a/META.yml
+++ b/META.yml
@@ -1,30 +1,30 @@
---- #YAML:1.0
-name:               LucyX-Search-WildcardQuery
-version:            0.03
-abstract:           Lucy query extension
+---
+abstract: 'Lucy query extension'
 author:
-    - Peter Karman <karman@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Peter Karman <karman@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Data::Dump:  0
-    Lucy:        0.001000
-    perl:        5.008003
-    Test::More:  0
-resources:
-    bugtracker:  http://rt.cpan.org/NoAuth/Bugs.html?Dist=LucyX-Search-WildcardQuery
-    homepage:    https://github.com/karpet/lucyx-search-wildcardquery
-    license:     http://dev.perl.org/licenses/
-    repository:  https://github.com/karpet/lucyx-search-wildcardquery
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: LucyX-Search-WildcardQuery
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Data::Dump: 0
+  Lucy: 0.001000
+  Test::More: 0
+  perl: 5.008003
+resources:
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=LucyX-Search-WildcardQuery
+  homepage: https://github.com/karpet/lucyx-search-wildcardquery
+  license: http://dev.perl.org/licenses/
+  repository: https://github.com/karpet/lucyx-search-wildcardquery
+version: 0.04
